--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,10 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: royalblue;
+    background-image: url("assets\img/comida.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 header {
