--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url("assets\img/comida.jpg");
+    background-image: url('https://previews.123rf.com/images/amalga/amalga1702/amalga170200058/73476092-modelo-incons%C3%BAtil-de-la-l%C3%ADnea-con-la-comida-r%C3%A1pida-vector-de-fondo-boceto.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
